Improve XSD cli commands